<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/social"
        />
    <item
        android:id="@+id/navigation_dictionaties"
        android:icon="@drawable/ic_bookmark_black_24dp"
        android:title="@string/dictionaries_menu"/>
    <item
        android:id="@+id/navigation_cards"
        android:icon="@drawable/ic_filter_none_black_24dp"
        android:title="@string/cards"
        />
    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/ic_desktop_windows_black_24dp"
        android:title="@string/watch"/>
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_brightness_7_black_24dp"
        android:title="@string/settings"/>

</menu>