<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_new_dict"
        android:text="@string/name_your_dict"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_dark"/>

   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/type_dict_name"
       android:id="@+id/type_new_dict"
       android:layout_below="@id/name_new_dict"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_dict_description"
        android:id="@+id/new_dict_description"
        android:layout_below="@id/type_new_dict"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/create_dict"
        android:textSize="20dp"
        android:id="@+id/add_new_dict"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonstyle"
        android:textColor="@color/white"
        android:layout_below="@id/new_dict_description"
        />
</RelativeLayout>