<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.example.mp11.fragments.SocialFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#555"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/adding_word"
        android:paddingVertical="20dp"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/elevation_large"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="10dp"


        card_view:cardBackgroundColor="@color/graylight"


        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/etword"
                android:background="@color/graylight"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/type_word"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/etdefinition"
                android:background="@color/graylight"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/type_meaning"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/etsyns"
                android:background="@color/graylight"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/type_synonims"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/etex"
                android:background="@color/graylight"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/type_examples"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnstore"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:background="@drawable/buttonstyle"
        />


</LinearLayout>